--- a/kubeflow-jupyter/notebook-controller/kustomization.yaml
+++ b/kubeflow-jupyter/notebook-controller/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - kustomize/overlays/istio
-resources:
-- configs/logos-configmap.yaml
+
+patches:
+  - configs/logos-configmap.yaml
 
 configMapGenerator:
 - name: config
