--- a/kfserving/kustomization.yaml
+++ b/kfserving/kustomization.yaml
@@ -1,4 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
-- kustomize/overlays/kubeflow/
+- kustomize/overlays/kubeflow
+# - kustomize/crd
+
+namespace: kfserving-system
+
+generatorOptions:
+  disableNameSuffixHash: true
+
+secretGenerator:
+- name: kfserving-webhook-server-cert
+  behavior: create
+  files:
+  - .generated/tls.crt
+  - .generated/tls.key
