--- a/kubeflow-centraldashboard/kustomization.yaml
+++ b/kubeflow-centraldashboard/kustomization.yaml
@@ -2,3 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 bases:
 - kustomize/overlays/istio
+
+configMapGenerator:
+- name: centraldashboard-parameters
+  behavior: merge
+  literals:
+  - CD_REGISTRATION_FLOW=true
